# OrderBookMatchingEngine

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODEOWNERS  LICENSE  README.md  benchmark.sh  mkdocs.yaml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: docs.yaml  release.yaml  workflow.yaml
docs/: gen_ref_pages.py  index.md
src/order_matching/: __init__.py  custom_enum.py  executed_trades.py  execution.py  matching_engine.py  order.py  order_book.py  orders.py  random.py  schemas.py  side.py  status.py  trade.py  unprocessed_orders.py
tests/: conftest.py  test_executed_trades.py  test_execution.py  test_matching_engine.py  test_order.py  test_order_book.py  test_orders.py  test_random.py  test_side.py  test_status.py  test_trade.py  test_unprocessed_orders.py
